--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # FreeCad autosaves/backups
 *.FCStd?
 *.FCBak
+
+freecad/exports/
 kicad/LocalDeck-backups
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,linux
