chore(kicad): Added measurements & part numbers

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 freecad/exports/
 kicad/LocalDeck-backups
+kicad/production
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,linux
